[gd_scene load_steps=6 format=3 uid="uid://dbe08b6b14lir"]

[ext_resource type="Script" path="res://addons/helm/helm.gd" id="1_ho3hc"]
[ext_resource type="FontFile" uid="uid://c2m1baa2c4b87" path="res://addons/helm/fonts/CourierPrime-Regular.ttf" id="2_47ie5"]
[ext_resource type="FontFile" uid="uid://c8vcgqgud8jw6" path="res://addons/helm/fonts/CourierPrime-Bold.ttf" id="3_7swi1"]
[ext_resource type="FontFile" uid="uid://cjjfflry6x467" path="res://addons/helm/fonts/CourierPrime-Italic.ttf" id="4_kmfnb"]
[ext_resource type="FontFile" uid="uid://c2xpi1l54g2l1" path="res://addons/helm/fonts/CourierPrime-BoldItalic.ttf" id="5_lcpk0"]

[node name="HelmCanvas" type="CanvasLayer"]
layer = 128
script = ExtResource("1_ho3hc")

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.501961)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Result" type="RichTextLabel" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
theme_override_fonts/normal_font = ExtResource("2_47ie5")
theme_override_fonts/bold_font = ExtResource("3_7swi1")
theme_override_fonts/italics_font = ExtResource("4_kmfnb")
theme_override_fonts/bold_italics_font = ExtResource("5_lcpk0")
theme_override_fonts/mono_font = ExtResource("2_47ie5")
bbcode_enabled = true
scroll_following = true
selection_enabled = true

[node name="CommandInput" type="LineEdit" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("2_47ie5")
clear_button_enabled = true
caret_blink = true

[connection signal="text_submitted" from="Panel/VBoxContainer/CommandInput" to="." method="_on_command_input_text_submitted"]
